<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <import type="java.util.List" />

        <import type="android.view.View" />

        <import type="tw.com.m17interview.model.network.User" />

        <variable
            name="users"
            type="List&lt;User>" />
    </data>

    <androidx.cardview.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="@dimen/large_card_height"
        android:layout_marginBottom="13dp"
        card_view:cardCornerRadius="@dimen/card_corner_radius"
        card_view:contentPadding="12dp">

        <androidx.constraintlayout.widget.ConstraintLayout xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.33" />

            <ImageView
                android:id="@+id/avatar"
                android:layout_width="0dp"
                android:layout_height="120dp"
                android:contentDescription="@string/a11y_user_avatar"
                android:scaleType="centerCrop"
                app:avatarUrl='@{users.size() > 0 ? users[0].avatarUrl : ""}'
                app:layout_constraintEnd_toStartOf="@id/guideline"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <LinearLayout
                android:id="@+id/title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/guideline"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:text="@string/name"
                    android:visibility="@{users.size() > 0 ? View.VISIBLE : View.GONE}"
                    tools:background="@android:color/holo_red_dark"
                    tools:text="name" />

                <TextView
                    android:id="@+id/name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:text='@{users.size() > 0 ? users[0].login : ""}'
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/guideline"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:background="@android:color/holo_red_dark"
                    tools:text="name" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/subtitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/guideline"
                app:layout_constraintTop_toBottomOf="@id/title">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:text="@string/id"
                    android:visibility="@{users.size() > 0 ? View.VISIBLE : View.GONE}"
                    tools:background="@android:color/holo_red_dark"
                    tools:text="name" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:text='@{users.size() > 0 ? String.valueOf(users[0].id) : ""}'
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/guideline"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:background="@android:color/holo_red_dark"
                    tools:text="name" />

            </LinearLayout>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="20dp"
                android:gravity="start|center_vertical"
                android:text="@string/profile3_ui_description"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/guideline"
                app:layout_constraintTop_toBottomOf="@id/subtitle" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginBottom="20dp"
                android:gravity="start|center_vertical"
                android:lineSpacingMultiplier="2"
                android:text="@string/profile3_ui_dummy_description"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</layout>